# agi

./: README.md  pyproject.toml
examples/: quantum_agi_demo.py
qeaf/: __init__.py  main.py
qeaf/consciousness/: __init__.py  emergence.py
qeaf/core/: __init__.py  consciousness.py  quantum_agi.py
qeaf/data/: quantum_dataset.py
qeaf/military/: __init__.py  oversight.py
qeaf/quantum/: __init__.py  decoherence.py  entanglement.py
qeaf/security/: __init__.py  containment.py  encryption.py  quantum_random.py
qeaf/training/: quantum_trainer.py
tests/: test_quantum_agi.py
