[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quantum-agi-framework"
version = "0.1.0"
description = "Quantum-enhanced AGI Framework with Military-grade Neural Architecture"
authors = ["Classified <classified@blackops.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
tensorflow = "^2.13.0"
transformers = "^4.30.0"
qiskit = "^0.43.0"
pennylane = "^0.30.0"
jax = "^0.4.13"
numpy = "^1.24.0"
scipy = "^1.10.0"
pandas = "^2.0.0"
networkx = "^3.1"
ray = "^2.6.0"
gymnasium = "^0.29.0"
pytest = "^7.4.0"
black = "^23.7.0"
mypy = "^1.5.0"
ruff = "^0.0.284"

[tool.ruff]
line-length = 88
target-version = "py39" 